<resources>
    <string name="app_name">Playing With Numbers</string>
    <string name="menu">Menu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question_number">Question: %d / %d</string>
    <string name="select_the_level">Select the level</string>
    <string name="select_the_operator">Select the operator</string>
    <string name="select_the_mode">Select the mode</string>
    <string name="select_the_equation_type">Select the equation type</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="level_4">Level 4</string>
    <string name="addition_subtraction">Addition / Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="division">Division</string>
    <string name="visual">Visual</string>
    <string name="abacus">Abacus</string>
</resources>