<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LevelSelectionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="48dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/center_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="48dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/select_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/select_the_level"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/level_1"
            app:layout_constraintStart_toStartOf="@id/start_guideline" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/level_1"
            style="@style/LevelOption"
            android:layout_marginEnd="8dp"
            android:tag="1"
            android:text="@string/level_1"
            app:layout_constraintBottom_toTopOf="@id/level_3"
            app:layout_constraintEnd_toEndOf="@id/center_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/level_2"
            style="@style/LevelOption"
            android:layout_marginStart="8dp"
            android:tag="2"
            android:text="@string/level_2"
            app:layout_constraintBottom_toTopOf="@id/level_4"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/center_guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/level_3"
            style="@style/LevelOption"
            android:layout_marginEnd="8dp"
            android:tag="3"
            android:text="@string/level_3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/center_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/level_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/level_4"
            style="@style/LevelOption"
            android:layout_marginStart="8dp"
            android:tag="4"
            android:text="@string/level_4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/center_guideline"
            app:layout_constraintTop_toBottomOf="@id/level_2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>